workshop03/ingress/appv1-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: appv1-deploy

spec:
  replicas: 2
  selector:
    matchLabels:
      name: nwapp
      version: v1
  template: 
    metadata:
      name: nwapp-pod
      labels: 
        name: nwapp
        version: v1
    spec:
      containers:
      - name: nwapp-container
        image: stackupiss/northwind-app:v1
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        imagePullPolicy: IfNotPresent
        ports:
        - name: nwapp-port
          containerPort: 3000
