workshop03/ingress/db-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: db-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      name: mysqldb
  template: 
    metadata:
      labels: 
        name: mysqldb
    spec:
      volumes: 
      - name: mysqldb-volume
        persistentVolumeClaim: 
          claimName: mysqldb-pvc
      containers:
      - name: mysqldb-container
        image: stackupiss/northwind-db:v1
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        imagePullPolicy: IfNotPresent
        ports:
        - name: mysqldb-port
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysqldb-volume
