workshop03/ingress/appv1-service.yml
apiVersion: v1
kind: Service

metadata: 
  name: nwappv1-svc
spec:
  type: ClusterIP
  selector: 
    name: nwapp
    version: v1
  ports:
  - name: nwappv1-http
    port: 80
    targetPort: nwapp-port
