workshop03/ingress/appv2-service.yml
apiVersion: v1
kind: Service

metadata: 
  name: nwappv2-svc
spec:
  type: ClusterIP
  selector: 
    name: nwapp
    version: v2
  ports:
  - name: nwappv2-http
    port: 80
    targetPort: nwapp-port
