workshop03/ingress/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress

metadata: 
  name: myapp-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: false

spec:
  backend:
    serviceName: nwappv2-svc
    servicePort: 80
  rules:
  - host: app1.157.230.194.68.nip.io
    http:
      paths:
      - backend: 
          serviceName: nwappv1-svc
          servicePort: 80
  - host: app2.157.230.194.68.nip.io
    http:
      paths:
      - backend:
          serviceName: nwappv2-svc
          servicePort: 80
